# infinitecopy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  infinitecopy.py  pyproject.toml  update_version.sh
.github/: dependabot.yml
.github/workflows/: package.yml
InfiniteCopy/: Clipboard.py  ClipboardItemModel.py  ClipboardItemModelImageProvider.py  MimeFormats.py
infinitecopy/: Application.py  Client.py  Clipboard.py  ClipboardFactory.py  ClipboardItemModel.py  ClipboardItemModelImageProvider.py  CommandHandler.py  FocusMonitor.py  MimeFormats.py  Paster.py  Plugin.py  PluginManager.py  Server.py  WaylandClipboard.py  __init__.py  __main__.py  commands.py  serialize.py
infinitecopy/plugins/: post.py  pre.py
qml/: ClipboardItem.qml  ClipboardItemCopyTime.qml  ClipboardItemHtml.qml  ClipboardItemRow.qml  ClipboardItemText.qml  ClipboardItemView.qml  ClipboardItemViewHighlight.qml  FilterTextField.qml  MainWindow.qml
tests/: conftest.py  test_client_simple.py  test_commands_add_get.py  test_window.py
