[tool.poetry]
name = "infinitecopy"
version = "0.1.0"
description = "Simple clipboard manager"
license = "GPL-3.0-or-later"
authors = ["Lukas Holecek <hluk@email.cz>"]
include = ["infinitecopy.png", "qml/*"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
PySide6-Essentials = "^6.7.0"
PyGObject = [
  {version = "^3.42.0", markers = "platform_system == 'Linux'"}
]

[tool.poetry.dev-dependencies]
Nuitka = "^2.4"
zstandard = "^0.22.0"
imageio = [
  {version = "^2.22.4", markers = "platform_system != 'Linux'"}
]
pillow = "^10.3.0"
pylint = "^3.1.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
infinitecopy = "infinitecopy.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
ignore-paths = [
    "^tests/",
]
jobs=0

[tool.pylint."messages control"]
disable = [
    "broad-exception-caught",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-name-in-module",
    "redefined-outer-name",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-return-statements",
    "wrong-import-position",
]
