[project]
name = "infinitecopy"
version = "0.1.0"
description = "Simple clipboard manager"
license = "GPL-3.0-or-later"
authors = [{name = "Lukas Holecek", email = "hluk@email.cz"}]
include = ["infinitecopy.png", "qml/*"]
requires-python = ">=3.10,<3.14"

dependencies = [
    "PySide6-Essentials~=6.8.1",
    "PyGObject~=3.50.0; platform_system == 'Linux'",
]

[tool.poetry.group.dev.dependencies]
Nuitka = "^2.5"
zstandard = "^0.23.0"
imageio = [
  {version = "^2.22.4", markers = "platform_system != 'Linux'"}
]
pillow = "^11.0.0"
pylint = "^3.3.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[project.scripts]
infinitecopy = "infinitecopy.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
ignore-paths = [
    "^tests/",
]
jobs=0

[tool.pylint."messages control"]
disable = [
    "broad-exception-caught",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-name-in-module",
    "redefined-outer-name",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-return-statements",
    "wrong-import-position",
]
