[project]
name = "infinitecopy"
version = "0.1.0"
description = "Simple clipboard manager"
license = "GPL-3.0-or-later"
authors = [{name = "Lukas Holecek", email = "hluk@email.cz"}]
requires-python = ">=3.10,<3.15"

dependencies = [
    "PySide6-Essentials~=6.8.3",
    "PyGObject~=3.50.0; platform_system == 'Linux'",
]

[dependency-groups]
dev = [
    "Nuitka>=2.8,<5",
    "zstandard>=0.25.0,<0.26",
    "imageio>=2.22.4,<3; platform_system != 'Linux'",
    "pillow>=12.2.0,<13",
    "pylint>=4.0.4,<5",
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
]

[project.scripts]
infinitecopy = "infinitecopy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/infinitecopy",
    "/infinitecopy.png",
    "/qml",
    "/tests",
]

[tool.pylint.main]
ignore-paths = [
    "^tests/",
]
jobs=0

[tool.pylint."messages control"]
disable = [
    "broad-exception-caught",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-name-in-module",
    "redefined-outer-name",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-return-statements",
    "wrong-import-position",
]
